[package]
name = "oyster-sdk"
version = "0.6.1"
edition = "2021"
description = "Oyster SDK"
license = "MIT"

[dependencies]
aws-nitro-enclaves-cose = "0.5.0"
chrono = "0.4.23"
clap = { version = "4.0.26", features = ["derive"] }
hex = "0.4.3"
hyper = { version = "0.14.23", features = ["client", "http1", "http2", "tcp"] }
libsodium-sys-stable = { version = "1.19.27" }
openssl = { version = "0.10", features = ["vendored"] }
serde = "1.0.152"
serde_cbor = "0.11.2"
serde_json = "1.0"
snow = "0.9.4"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
http = "0.2.9"
hyper = { version = "0.14.23", features = ["client", "http1", "http2", "tcp", "server"] }
tower = { version = "0.4.13", features = ["full"] }

[lib]
name = "oyster"

[[bin]]
name = "verifier"
path = "src/main.rs"

[[example]]
name = "scallop"
path = "examples/scallop.rs"

[[example]]
name = "hyper"
path = "examples/hyper.rs"

[profile.release]
strip = true
lto = true
panic = "abort"

