[package]
name = "oyster-sdk"
version = "0.8.3"
edition = "2021"
description = "Oyster SDK"
license = "MIT"

[dependencies]
aws-nitro-enclaves-cose = "0.5.1"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
hex = "0.4.3"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.3", features = ["full"] }
libsodium-sys-stable = { version = "1.20.5" }
openssl = { version = "0.10", features = ["vendored"] }
serde = "=1.0.152"
serde_cbor = "0.11.2"
serde_json = "1.0"
snow = "0.9.6"
thiserror = "1.0.58"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
axum = "0.7.4"
http = "1.1.0"
hyper = { version = "1.2.0", features = ["client", "http1", "http2", "server"] }
tower = { version = "0.4.13", features = ["full"] }

[lib]
name = "oyster"

[[bin]]
name = "verifier"
path = "src/main.rs"

[[example]]
name = "scallop"
path = "examples/scallop.rs"

[[example]]
name = "hyper"
path = "examples/hyper.rs"

[[example]]
name = "axum"
path = "examples/axum.rs"

[profile.release]
strip = true
lto = true
panic = "abort"
